--- a/hot-log-web/pom.xml
+++ b/hot-log-web/pom.xml
@@ -7,9 +7,32 @@
         <groupId>com.github.spectre</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <spring-boot-version>2.1.0.RELEASE</spring-boot-version>
+    </properties>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hot-log-web</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot-version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${spring-boot-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>${spring-boot-version}</version>
+        </dependency>
+    </dependencies>
 </project>
