--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<lombok.version>1.16.20</lombok.version>
 		<jackson.version>2.9.3</jackson.version>
 		<fastjson.version>1.2.47</fastjson.version>
+		<spring-boot-version>2.1.0.RELEASE</spring-boot-version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,25 @@
 			<version>${fastjson.version}</version>
 		</dependency>
 
+		<!--spring boot-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring-boot-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot-version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+			<version>${spring-boot-version}</version>
+		</dependency>
     </dependencies>
 
 </project>
